--- a/index.html
+++ b/index.html
@@ -457,6 +457,98 @@
                 </div>
               </div>
             </div>
+            <section class="advantages-ex">
+              <div class="container">
+                  <div class="row">
+                    <div class="col-3">
+                      <img src="https://w.ladicdn.com/s600x950/5f51b5d1ef9293158e51a3d3/cfa6820efdb935e76ca8-20211117040141.jpg" alt="">
+                    </div>
+                    <div class="col-3">
+                      <img src="https://w.ladicdn.com/s600x950/5f51b5d1ef9293158e51a3d3/eac73eeb3a5cf202ab4d-20211117033550.jpg" alt="">
+                    </div>
+                    <div class="col-3">
+                      <img src="https://w.ladicdn.com/s600x900/5f51b5d1ef9293158e51a3d3/83e28ee48a53420d1b42-20211117033550.jpg" alt="">
+                    </div>
+                    <div class="col-3">
+                      <img src="https://w.ladicdn.com/s600x950/5f51b5d1ef9293158e51a3d3/69c5422247958fcbd684-20211117033550.jpg" alt="">
+                    </div>
+                  </div>
+                  <div class="row">
+                    <div class="advan">
+                    <p class="star">Từ vị trí Novaworld kết nối đến tuyến cao tốc từ Dầu Giây - Phan Thiết chỉ mất khoảng 10 phút đi xe.</p>
+                    <p class="star">Hệ thống hạ tầng giao thông được đồng bộ là một yếu tố thúc đẩy giá trị gia tăng tại Novaworld Phan Thiết.</p>
+                    <p class="star">Đến sân bay Phan Thiết cũng chỉ mất khoảng 15-20 phút đi xe, điều này biến Novaworld Phan Thiết Bình Thuận thành địa điểm lý tưởng, một vị trí vàng cho sự phát triển một thành phố du lịch. </p>
+                  </div>
+                  </div>
+              </div>
+            </section>
+            <div class="florida">
+              <div class="container d-flex pt-5">
+                <div class="col-7 text-white text-center">
+                  <h2>ĐĂNG KÝ</h2>
+                  <h3>NHẬN TƯ VẤN CHUYÊN SÂU DỰ ÁN</h3>
+                </div>
+                <div class="col-4 text-center">
+                  <div class="input-box text-white">
+                    <h3>BÁO GIÁ ƯU ĐÃI</h3>
+                    <h3>TỐT NHẤT THÁNG 7</h3>
+                    <p>Hãy là nhà đầu tư thông thái - cơ hội duy nhất trong năm nay</p>
+                    <div class="user-form-florida">
+                      <ul class="list-styled-none">
+                        <li>
+                          <input type="text" placeholder="Tên Quý Khách">
+                        </li>
+                        <li>
+                          <input type="password" placeholder="Số Điện Thoại">
+                        </li>
+                        <li>
+                          <a href="#" class="">NHẬN BẢNG GIÁ</a>
+                        </li>
+                      </ul>
+                    </div>
+                    <p>( * ) Thông Tin Của Quý Khách Được Bảo Mật Tuyệt Đối</p>
+                  </div>
+                  <p class="text-white m-5 fw-bold call text-center">GỌI NGAY: 090 636 9068</p>
+                </div>
+              </div>
+            </div>
+            <div class="selling-estate-bg">
+              <section class="selling-estate text-center">
+                <div class="container">
+                <h3 class="headLine-white">PHÂN KHU ĐANG BÁN</h3>
+                <h3 class="subheadLine lightDarkBlue">NOVAWORLD PHAN THIẾT</h3>
+                <div id="carouselExampleControls" class="carousel slide" data-bs-ride="carousel">
+                  <div class="carousel-inner">
+                    <div class="active carousel-item">
+                      <img src="https://w.ladicdn.com/s1200x800/5f51b5d1ef9293158e51a3d3/web-landing-page-06-20220221095105.jpg" class="d-block w-33" alt="...">
+                      <img src="https://w.ladicdn.com/s1200x800/5f51b5d1ef9293158e51a3d3/web-landing-page-06-20220221095105.jpg" class="d-block w-33" alt="...">
+                      <img src="https://w.ladicdn.com/s1200x800/5f51b5d1ef9293158e51a3d3/web-landing-page-06-20220221095105.jpg" class="d-block w-33" alt="...">
+                    </div>
+                    <div class="active carousel-item">
+                      <img src="https://w.ladicdn.com/s1200x800/5f51b5d1ef9293158e51a3d3/web-landing-page-06-20220221095105.jpg" class="d-block w-33" alt="...">
+                    </div>
+                    <div class="active carousel-item">
+                      <img src="https://w.ladicdn.com/s1200x800/5f51b5d1ef9293158e51a3d3/web-landing-page-06-20220221095105.jpg" class="d-block w-33" alt="...">
+                    </div>
+                    <div class="active carousel-item">
+                      <img src="https://w.ladicdn.com/s1200x800/5f51b5d1ef9293158e51a3d3/web-landing-page-06-20220221095105.jpg" class="d-block w-33" alt="...">
+                    </div>
+                    <div class="active carousel-item">
+                      <img src="https://w.ladicdn.com/s1200x800/5f51b5d1ef9293158e51a3d3/web-landing-page-06-20220221095105.jpg" class="d-block w-33" alt="...">
+                    </div>
+                  </div>
+                  <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleControls" data-bs-slide="prev">
+                    <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                    <span class="visually-hidden">Previous</span>
+                  </button>
+                  <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleControls" data-bs-slide="next">
+                    <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                    <span class="visually-hidden">Next</span>
+                  </button>
+                </div>
+              </div>
+              </section>
+            </div>
 
     </div>
   </div>
