--- a/index.html
+++ b/index.html
@@ -19,23 +19,37 @@
 
 <body>
 	<header>
-		<div class="navbar">
-			<div class="container d-flex flex-row justify-content-around align-items-center">
-				<div class="logo">
-					<img src="https://w.ladicdn.com/s550x400/5f51b5d1ef9293158e51a3d3/logo-nvwpt-light-version-20210516145537-20211117042458.png"
-						alt="">
-				</div>
-				<div class="menu">
-					<ul class="text-white d-flex m-0 align-items-center list-unstyled">
-						<li><a href="index.html/#indexPage">TỔNG QUAN</a></li>
-						<li><a href="#">VỊ TRÍ</a></li>
-						<li><a href="#">MẶT BẰNG</a></li>
-						<li><a href="#">TIỆN ÍCH</a></li>
-						<li><a href="#">CHÍNH SÁCH</a></li>
-					</ul>
-				</div>
-			</div>
-		</div>
+		<nav class="navbar navbar-dark navbar-expand-lg header-bg header-bg">
+      <div class="container d-flex justify-content-start ">
+        <div class="nova-logo flex-grow-1">
+          <img src="img/nova-logo.png" alt="" class="" width="223px">
+        </div>
+        <div class="menu">
+          <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon"></span>
+          </button>
+          <div class="collapse navbar-collapse" id="navbarSupportedContent">
+            <ul class="navbar-nav me-auto mb-2 mb-lg-0 text-white list-unstyled text-decoration-none">
+              <li class="">
+                <a class="" href="#overview">TỔNG QUAN</a>
+              </li>
+              <li class="">
+                <a class="" href="#golden-place">VỊ TRÍ</a>
+              </li>
+              <li class="">
+                <a class="" href="#selling-estate">MẶT BẰNG</a>
+              </li>
+              <li class="">
+                <a class="" href="#five-star">TIỆN ÍCH</a>
+              </li>
+              <li class="">
+                <a class="" href="#policies">CHÍNH SÁCH</a>
+              </li>
+            </ul>
+          </div>
+        </div>
+      </div>
+    </nav>
 	</header>
 	<div id="indexPage">
 		<div class="container">
@@ -175,7 +189,7 @@
 				<img src="img/image-ocean-residence-2.jpg" alt="">
 				<img src="img/image-ocean-residence-3.jpg" alt="">
 				<img src="img/image-ocean-residence-4.jpg" alt="">
-				<div class="video-5">
+				<!-- <div class="video-5">
 					<video
 						src="https://s.ladicdn.com/5f51b5d1ef9293158e51a3d3/novaworld-phan-thiet-20211117062535.mp4"
 						class="iframe-video-preload w-100"
@@ -187,7 +201,7 @@
 				<div class="embed-responsive embed-responsive-16by9">
 					<iframe class="embed-responsive-item" src="https://www.youtube.com/embed/rUfNeKF6CXE?rel=0&amp;modestbranding=0&amp;playsinline=1&amp;controls=0&amp;enablejsapi=1&amp;origin=https%3A%2F%2Fwww.novaworld-phanthietvn.vn&amp;widgetid=1" width="100%" height="407"></iframe>
 				  </div>
-			</div>
+			</div> -->
 		</div>
 		<section class="hospital">
 			<div class="container">
@@ -263,7 +277,7 @@
 						alt="">
 				</div>
 			</div>
-			<section class="overview">
+			<section class="overview" id="overview">
 				<div class="row d-flex align-items-center">
 					<div class="col-lg-6 features">
 						<h3 class="headLine darkBlue">TỔNG QUAN DỰ ÁN</h3>
@@ -323,7 +337,7 @@
 					</div>
 				</div>
 			</section>
-			<section class="golden-place">
+			<section class="golden-place" id="golden-place">
 				<h3 class="headLine-40 darkBlue text-center">VỊ TRÍ VÀNG</h3>
 				<h3 class="subheadLine lightDarkBlue text-center">MANG ĐẾN NGÀN CƠ HỘI</h3>
 				<p class="text-center"><i class="fa-solid fa-location-dot"></i>&nbsp;Vị trí dự án Novaworld Phan Thiết
@@ -403,26 +417,26 @@
 		</div>
 		<section class="advantages-ex">
 			<div class="container">
-				<div class="row">
-					<div class="col-3">
+				<div class="row g-0">
+					<div class="col-lg-3 col-6 p-2">
 						<img src="https://w.ladicdn.com/s600x950/5f51b5d1ef9293158e51a3d3/cfa6820efdb935e76ca8-20211117040141.jpg"
 							alt="">
 					</div>
-					<div class="col-3">
+					<div class="col-lg-3 col-6 p-2">
 						<img src="https://w.ladicdn.com/s600x950/5f51b5d1ef9293158e51a3d3/eac73eeb3a5cf202ab4d-20211117033550.jpg"
 							alt="">
 					</div>
-					<div class="col-3">
+					<div class="col-lg-3 col-6 p-2">
 						<img src="https://w.ladicdn.com/s600x900/5f51b5d1ef9293158e51a3d3/83e28ee48a53420d1b42-20211117033550.jpg"
 							alt="">
 					</div>
-					<div class="col-3">
+					<div class="col-lg-3 col-6 p-2">
 						<img src="https://w.ladicdn.com/s600x950/5f51b5d1ef9293158e51a3d3/69c5422247958fcbd684-20211117033550.jpg"
 							alt="">
 					</div>
 				</div>
 				<div class="row">
-					<div class="advan">
+					<div class="advan ps-lg-5 ps-2 pt-3">
 						<p class="star">Từ vị trí Novaworld kết nối đến tuyến cao tốc từ Dầu Giây - Phan Thiết chỉ mất
 							khoảng 10 phút đi xe.</p>
 						<p class="star">Hệ thống hạ tầng giao thông được đồng bộ là một yếu tố thúc đẩy giá trị gia tăng
@@ -441,7 +455,7 @@
 			<img src="img/flower.svg" alt="" class="flower position-absolute">
 			<img src="img/lotus.svg" alt="" class="lotus position-absolute">
 			<img src="img/wave.svg" alt="" class="wave position-absolute">
-			<section class="selling-estate text-center">
+			<section class="selling-estate text-center" id="selling-estate">
 				<div class="container">
 					<h3 class="headLine-white pt-4">PHÂN KHU ĐANG BÁN</h3>
 					<h3 class="subheadLine lightDarkBlue pb-4">NOVAWORLD PHAN THIẾT</h3>
@@ -652,19 +666,19 @@
 				</div>
 			</div>
 		</div>
-		<div class="policies">
+		<div class="policies" id="policies">
 			<div class="heading text-center py-5">
 				<h2 class="headLine-white">CHÍNH SÁCH & BẢNG GIÁ</h2>
 				<h3 class="headLine-subWhite">CÁC SẢN PHẨM ĐANG BÁN</h3>
 			</div>
 			<div class="container">
-				<div class="row d-flex justify-content-center">
-					<div class="col-md-6">
-						<div class="wrapper price-list d-flex justify-content-center h-100">
-							<div class="flower-inner">
-								<img src="img/flower-policy.svg" alt="" >
+				<div class="row g-0 d-flex justify-content-center">
+					<div class="col-md-6 p-3">
+						<div class="wrapper price-list d-flex justify-content-start h-100">
+							<div class="flower-inner bg-success position-relative justify-content-start">
+								<img src="img/flower-policy.svg" alt="" width="45px" class="position-absolute">
 							</div>
-							<ul class="list-unstyled px-5">
+							<ul class="list-unstyled px-3 voucher">
 								<li class="headLine-policy">Ưu đãi 100.000.000 VND</li>
 								<li>Khi tham quan Novaland Gallery</li>
 								<li class="headLine-policy">Ưu đãi 100.000.000 VND</li>
@@ -673,9 +687,12 @@
 								<li>Trị giá 1.050.000.000 VND</li>
 						</div>
 					</div>
-					<div class="col-md-6">
-						<div class="wrapper policy d-flex flex-column justify-content-center h-100">
-							<ul class="list-unstyled px-5">
+					<div class="col-md-6 p-3">
+						<div class="wrapper price-list d-flex justify-content-start h-100">
+              <div class="flower-inner bg-success position-relative justify-content-start">
+								<img src="img/flower-policy.svg" alt="" width="45px" class="position-absolute">
+							</div>
+							<ul class="list-unstyled px-3 member">
 								<li class="headLine-policy">Ưu đãi dành cho đối tượng ưu tiên đến 2% </li>
 								<li class="headLine-policy">Ưu đãi Nova Collection 5% </li>
 								<li class="headLine-policy">Ưu đãi Nova Loyalty đến 5% </li>
@@ -683,9 +700,12 @@
 							</ul>
 						</div>
 					</div>
-					<div class="col-md-6">
-						<div class="wrapper price-list d-flex flex-column justify-content-center h-100">
-							<ul class="list-unstyled px-5">
+					<div class="col-md-6 p-3">
+						<div class="wrapper price-list d-flex justify-content-start h-100">
+              <div class="flower-inner bg-success position-relative justify-content-start">
+								<img src="img/flower-policy.svg" alt="" width="45px" class="position-absolute">
+							</div>
+							<ul class="list-unstyled px-3 voucher">
 								<li class="headLine-policy">Ưu đãi 100.000.000 VND</li>
 								<li>Cho khách hàng ngành y tế - giáo dục</li>
 								<li class="headLine-policy">Cam kết mua lại 24%</li>
@@ -694,9 +714,12 @@
 								<li>Trị giá đến 200.000.000 VND</li>
 						</div>
 					</div>
-					<div class="col-md-6">
-						<div class="wrapper policy d-flex flex-column justify-content-center h-100">
-							<ul class="list-unstyled px-5">
+					<div class="col-md-6 p-3">
+						<div class="wrapper price-list d-flex justify-content-start h-100">
+              <div class="flower-inner bg-success position-relative justify-content-start">
+								<img src="img/flower-policy.svg" alt="" width="45px" class="position-absolute">
+							</div>
+							<ul class="list-unstyled px-3 member">
 								<li class="headLine-policy">Hỗ trợ vay 50%, lãi suất 0% trong 24 tháng</li>
 								<li class="headLine-policy">Miễn phí quản lý 2 năm từ khi nhận nhà</li>
 								<li class="headLine-policy">Thanh toán linh hoạt trong 3 năm</li>
@@ -711,7 +734,7 @@
 			</div>
 		</div>
 		</div>
-		<section class="five-star">
+		<section class="five-star" id="five-star">
 			<div class="container">
 				<div class="heading text-center">
 					<h3 class="headLine headLine-40 darkBlue">TIỆN ÍCH 5 SAO</h3>
@@ -875,7 +898,7 @@
 							<img src="img/real-img-1.jpg" alt="">
 						</div>
 					</div>
-					<div class="row">
+					<!-- <div class="row">
 						<div class="col-4">
 							<div class="video-1">
 								<video
@@ -903,7 +926,7 @@
 									data-video-type="direct" preload="auto" loop autoplay controls></video>
 							</div>
 						</div>
-					</div>
+					</div> -->
 				</div>
 			</div>
 		</section>
